test/parsing/vass/wrong-escapes-2.chpl

writeln('Wrong backslash 2\'); \
writeln('DONE.');
